--- a/listOfPubs.tex
+++ b/listOfPubs.tex
@@ -14,17 +14,18 @@
 
 \underline{Papers}
 \begin{enumerate} 
-\item Mathialakan Thavappiragasasm and Vivek Kale. \textbf{\it CPU-GPU Performance Tuning for Improving Performance of Modern Scientific Applications on Exascale Supercomputers}. IEEE HiPC 2023. Goa, India. December 18-21, 2023.
-\item Shravan Kale, Kevin Huck, David Boehme, Vanessa Surjadidjaja and Vivek Kale. \textbf{\it Performance Analysis and Auto-tuning Tools for Performance Portable Parallel Programs.} 2023 ACM/IEEE International Conference for High Performance Computing Networking, Storage, and Analysis. Denver, CO, USA. November 12-17, 2023.
+\item Mathialakan Thavappiragasasm and Vivek Kale. \textbf{\textit{CPU-GPU Performance Tuning for Improving Performance of Modern Scientific Applications on Exascale Supercomputers}}. IEEE HiPC 2023. Goa, India. December 18-21, 2023.
+\item Shravan Kale, Kevin Huck, David Boehme, Vanessa Surjadidjaja and Vivek Kale. \textbf{\textit{Performance Analysis and Auto-tuning Tools for Performance Portable Parallel Programs}}. 2023 ACM/IEEE International Conference for High Performance Computing Networking, Storage, and Analysis. Denver, CO, USA. November 12-17, 2023.
 
-\item Vivek Kale, Vanessa Surjadidjaja, Christian Trott and James Brandt. \textbf{\it Data Order Reduction for Performance Monitoring of Supercomputers via the Kokkos Tools Sampler Utility. } LDMSCon 2023. Boston, MA, USA. June 13-15, 2023.
+\item Vivek Kale, Vanessa Surjadidjaja, Christian Trott and James Brandt. \textbf{\textit{Data Order Reduction for Performance Monitoring of Supercomputers via the Kokkos Tools Sampler Utility}} LDMSCon 2023. Boston, MA, USA. June 13-15, 2023. 
 
-\item Vivek Kale and Shyamali Mukherjee. \textbf{\it Tools to Rapidly Develop Sophisticated HPC Software Libraries}. SIAM Computational Science and Engineering Conference 2023. Amsterdam, Netherlands. March 2, 2023.
+\item Vivek Kale and Shyamali Mukherjee. \textbf{\textit{Tools to Rapidly Develop Sophisticated HPC Software Libraries}} SIAM Computational Science and Engineering Conference 2023. Amsterdam, Netherlands. March 2, 2023.
 
-\item Mathialakan Thavappiragasam and Vivek Kale. \textbf{ \it OpenMP’s Asynchronous Offloading for All-pairs Shortest Path Graph Algorithms on GPUs}  HiPar 2022 Workshop at The 2022 ACM/IEEE International Conference for High Performance Computing Networking, Storage, and Analysis. November 16, 2022. Dallas, Texas, USA.
+\item Mathialakan Thavappiragasam and Vivek Kale. \textbf{\textit{OpenMP’s Asynchronous Offloading for All-pairs Shortest Path Graph Algorithms on GPUs}}  HiPar 2022 Workshop at The 2022 ACM/IEEE International Conference for High Performance Computing Networking, Storage, and Analysis. November 16, 2022. Dallas, Texas, USA. 
 
 \item Mathialakan Thavappiragasam, Vivek Kale, Oscar Hernandez and  Ada Sedova. \textbf{\textit{Addressing Load Imbalance in Bioinformatics and Biomedical Applications: Efficient Scheduling across Multiple GPUs}} In Proceedings of 12th International Workshop on High Performance Bioinformatics and Biomedicine. December 9, 2021. Houston, Texas, USA. 
-\item Barbara Chapman, Buu Pham, Charlene Yang, Christopher Daley, Colleen Bertoni, Dhruva Kulkarni, Dhruva Kulkarni, Dossay Oryspayev, Ed D’Azevedo, Helen He, Johannes Doerfert, Keren Zhou, Kiran Ravikumar, Mark Gordon, Mauro Del Ben, Meifeng Lin, Melisa Alkan, Michael Kruse, Oscar Hernandez, P. K. Yeung, Paul Lin, Peng Xu, Swaroop Pophale, Tosaporn Sattasathuchana, Vivek Kale, William Huhn and Dhruva Kulkarni. \textbf{\textit{Outcomes of OpenMP Hackathon: OpenMP Application Experiences with the Offloading Model: Part 1}} In Proceedings of 17th International Workshop on OpenMP, IWOMP 2021, Bristol, UK, September 14–16, 2021.
+
+\item Barbara Chapman, Buu Pham, Charlene Yang, Christopher Daley, Colleen Bertoni, Dhruva Kulkarni, Dhruva Kulkarni, Dossay Oryspayev, Ed D’Azevedo, Helen He, Johannes Doerfert, Keren Zhou, Kiran Ravikumar, Mark Gordon, Mauro Del Ben, Meifeng Lin, Melisa Alkan, Michael Kruse, Oscar Hernandez, P. K. Yeung, Paul Lin, Peng Xu, Swaroop Pophale, Tosaporn Sattasathuchana, Vivek Kale, William Huhn and Dhruva Kulkarni. \textbf{\textit{Outcomes of OpenMP Hackathon: OpenMP Application Experiences with the Offloading Model: Part 1}} In Proceedings of 17th International Workshop on OpenMP, IWOMP 2021, Bristol, UK, September 14–16, 2021. 
 
 \item Barbara Chapman, Buu Pham, Charlene Yang, Christopher Daley, Colleen Bertoni, Dhruva Kulkarni, Dhruva Kulkarni, Dossay Oryspayev, Ed D’Azevedo, Helen He, Johannes Doerfert, Keren Zhou, Kiran Ravikumar, Mark Gordon, Mauro Del Ben, Meifeng Lin, Melisa Alkan, Michael Kruse, Oscar Hernandez, P. K. Yeung, Paul Lin, Peng Xu, Swaroop Pophale, Tosaporn Sattasathuchana, Vivek Kale, William Huhn and Dhruva Kulkarni. \textbf{\textit{Outcomes of OpenMP Hackathon: OpenMP Application Experiences with the Offloading Model: Part 2}} In Proceedings of 17th International Workshop on OpenMP, IWOMP 2021, Bristol, UK, September 14–16, 2021. 
 
