update with short sections

--- a/resume-1pager.tex
+++ b/resume-1pager.tex
@@ -47,24 +47,19 @@
 \vspace{0.2in} 
 \input{listOfExperiencesShort} 
 
-%\section{Research Overview} 
-%I have worked on low-overhead dynamic scheduling strategies for
-%performance tuning MPI+OpenMP codes on multi-core processors. The
-%techniques have been applied to dense matrix factorization codes,
-%specifically Communication-avoiding LU and Communication-avoiding
-%QR. I have applied the strategies to regular mesh computations and
-%Lattice-Boltzmann simulations, and most recently, n-body
-%simulations. The scheduling strategies developed can be beneficial to
-%mitigate the amplification problem, a problem shown to cause serious
-%performance bottlenecks for bulk-synchronous and loosely synchronous
-%MPI applications running on next-generation supercomputers or a
-%cloud-based infrastructure.
-
-\section{Highlights of Publications}
+\section{Publications}
 \vspace{0.1in}
 \input{listOfPubsHighlights}
 
+\section{Projects}
+\vspace{0.1in}
+\input{listOfProjectsShort}
+
 % \section{Products Developed} 
+
+\section{Skills} 
+\vspace{0.1in}
+\input{listofSkillsShort} 
 
 %\section{Membership in Societies}
 %\vspace*{-0.01in}
