updating list of Experiences

--- a/listOfPubs.tex
+++ b/listOfPubs.tex
@@ -14,6 +14,10 @@
 
 \underline{Papers}
 \begin{enumerate} 
+\item Vivek Kale, Vanessa Surjadidjaja, and James Brandt. \textbf{\textit{Using LDMS Performance Monitoring for Tuning Kokkos Programs via PAPI}}. LDMSCon 2024. June 11-13, 2024. Boston, MA.
+
+\item Vivek Kale and Thomas R. Scogland. \textbf{\textit{An OpenMP Set Object for Heterogeneous Parallel Programming with Multi-xPUs}}. ArXiv. May 2024. 
+%HPC Software Technology} 
 \item Mathialakan Thavappiragasasm and Vivek Kale. \textbf{\textit{CPU-GPU Performance Tuning for Improving Performance of Modern Scientific Applications on Exascale Supercomputers}}. IEEE HiPC 2023. Goa, India. December 18-21, 2023.
 \item Shravan Kale, Kevin Huck, David Boehme, Vanessa Surjadidjaja and Vivek Kale. \textbf{\textit{Performance Analysis and Auto-tuning Tools for Performance Portable Parallel Programs}}. 2023 ACM/IEEE International Conference for High Performance Computing Networking, Storage, and Analysis. Denver, CO, USA. November 12-17, 2023.
 
