--- a/resume-1pager.tex
+++ b/resume-1pager.tex
@@ -3,6 +3,7 @@
 %\newcommand{comments}{1}{[]}
 \newcommand{\comments}[1]{}
 
+\usepackage{url}
 %\documentclass[serif, mathserif, final]{beamer}
 \documentclass[9pt]{res} 
 
@@ -22,30 +23,21 @@
 \vspace{-0.1in}
 \moveleft\hoffset\vbox{\hrule width\resumewidth height 1pt}\smallskip
 \begin{center}
-\textit{\bf Phone}: +01 217-369-7996. \textit{\bf E-mail}: vivek.lkale@gmail.com. \textit{\bf Web}: http://vlkale.github.io. \\ U.S. Citizen
+	\textit{\bf Phone}: +01 217-369-7996. \textit{\bf E-mail}: \url{vivek.lkale@gmail.com}. \textit{\bf Web}: \url{http://vlkale.github.io}. \\ U.S. Citizen
 \end{center}
 %\moveleft.5\sectionwidth\centerline{U.S. Citizen} 
 \begin{center}
 %\moveleft.5\sectionwidth\centerline{{\it \small Objective}: \small Obtain position as software engineer specializing in performance engineering.}
 \end{center}
 \vspace{-0.5in}
-\small 
+\small
 \section{Education}
 \vspace{0.2in}
     \small B.S., Computer Science, 2007, University of Illinois at Urbana-Champaign\\
-    \small Ph.D., Computer Science, 2015,  University of Illinois at Urbana-Champaign, {\it Advisor}: William D. Gropp
-
-%\section{Awards}
-%\vspace{0.1in}
-%\input{listOfAwards} 
-
-\section{Technical Skills} 
-\vspace{0.1in}
-\input{listOfSkillSetsForResume} 
-
+    \small Ph.D., Computer Science, 2015, University of Illinois at Urbana-Champaign
 \section{Experience}
-\vspace{0.2in} 
-\input{listOfExperiencesShort} 
+\vspace{0.2in}
+\input{listOfExperiences-for1pagerResume}
 
 \section{Publications}
 \vspace{0.1in}
@@ -53,17 +45,12 @@
 
 \section{Projects}
 \vspace{0.1in}
-\input{listOfProjectsShort}
+\input{listOfProjects-for1pagerResume}
 
-% \section{Products Developed} 
-
-\section{Skills} 
+\section{Technical Skills}
 \vspace{0.1in}
-\input{listofSkillsShort} 
-
-%\section{Membership in Societies}
-%\vspace*{-0.01in}
-%\input{listOfSocieties} 
+\input{listOfSkillSetsForResume}
 
 \end{resume}
+
 \end{document}
