--- a/listOfExperiences.tex
+++ b/listOfExperiences.tex
@@ -81,7 +81,7 @@ for an application code's efficient execution using the Globus Toolkit.
 \end{itemize}
 
 %TODO: adaptive VS hybrid VS ... 
-\textbf{Charmworks, Inc.$\>$$\>$$\>$$\>$Developer$\>$$\>$$\>$$\>$Jan. 2016 - Nov. 2016}
+\textbf{Charmworks, Inc.$\>$$\>$$\>$$\>$Developer$\>$$\>$$\>$$\>$Jan 2016 - Nov 2016}
 \vspace*{-0.0in}
 \begin{itemize}
 \item Implemented mixed static/dynamic loop scheduling
@@ -93,7 +93,7 @@ strategies within Charm++'s thread scheduling library.
 \item Assisted with business aspects of a high-tech startup. 
 \end{itemize} 
 
-\textbf{ University of Illinois$\>$$\>$$\>$$\>$Postdoctoral Associate$\>$$\>$$\>$$\>$Jul. 2015 – Dec. 2015}
+\textbf{ University of Illinois$\>$$\>$$\>$$\>$Postdoctoral Associate$\>$$\>$$\>$$\>$Jul 2015 – Dec 2015}
 \vspace*{-0.0in}
 \begin{itemize} 
 \item Developed library that allows application programmers to use strategies from dissertation.
@@ -102,7 +102,7 @@ GPGPU processor and Intel Xeon Phi.
 \item Incorporated over-decomposition and locality-aware scheduling into strategies from dissertation.
 \end{itemize}
 
-\textbf{Lawrence Livermore Nat’l Lab$\>$$\>$$\>$$\>$Lawrence Scholar$\>$$\>$$\>$$\>$Feb. 2012 – Jun. 2014}
+\textbf{Lawrence Livermore Nat’l Lab$\>$$\>$$\>$$\>$Lawrence Scholar$\>$$\>$$\>$$\>$Feb 2012 – Jun 2014}
 \vspace*{-0.0in}
 \begin{itemize} 
 \item Measured MPI communication delays for micro-benchmarks codes run on supercomputers and worked to find tools to measure dequeue overheads of OpenMP loop schedulers.
@@ -114,7 +114,7 @@ techniques and runtime.
 of low-overhead schedulers.
 \end{itemize}
 
-\textbf{Lawrence Livermore Nat’l Lab$\>$$\>$$\>$$\>$Scholar$\>$$\>$$\>$$\>$Jun. 2011 - Sep. 2011}
+\textbf{Lawrence Livermore Nat’l Lab$\>$$\>$$\>$$\>$Scholar$\>$$\>$$\>$$\>$Jun 2011 - Sep 2011}
 \vspace*{-0.0in}
 \begin{itemize} 
 \item Experimented with different OpenMP parameters of implemented MPI+OpenMP application code to understand performance optimizations on
@@ -122,26 +122,26 @@ LLNL supercomputers.
 \item Developed software design for low-overhead loop scheduling library based on libgomp software design.
 \end{itemize} 
 
-\textbf{Lawrence Berkeley Nat’l Lab$\>$$\>$$\>$$\>$Summer Scholar$\>$$\>$$\>$$\>$Aug. 2010 - Sep. 2010}
+\textbf{Lawrence Berkeley Nat’l Lab$\>$$\>$$\>$$\>$Summer Scholar$\>$$\>$$\>$$\>$Aug 2010 - Sep 2010}
 \begin{itemize}
 \item Analyzed results for the performance tests developed on NERSC machines.
 \item Compared with collectives in reference to MPI (mpich2) runtime system.
 \end{itemize}
 
-\textbf{Lawrence Livermore Nat’l Lab$\>$$\>$$\>$$\>$Scholar$\>$$\>$$\>$$\>$May. 2010 - Aug. 2010}
+\textbf{Lawrence Livermore Nat’l Lab$\>$$\>$$\>$$\>$Scholar$\>$$\>$$\>$$\>$May 2010 - Aug 2010}
 \begin{itemize}
 \item Modified libgomp runtime system in order to integrate low-overhead schedulers within it.
 \item Developed an algorithm multi-stage low-overhead loop scheduler with each stage associated with a level in the memory hierarchy, allowing for MPI-shared memory extensions to be used in conjunction with the low-overhead loop scheduling strategies.
 \end{itemize}
 
-\textbf{Goldman-Sachs$\>\>\>\>$Summer Analyst$\>\>\>\>$Jun. ‘09 – Sep. ‘09}
+\textbf{Goldman-Sachs$\>\>\>\>$Summer Analyst$\>\>\>\>$Jun 2009 – Sep 2009}
 \vspace*{-0.0in}
 \begin{itemize}
 \item Wrote code for testing trading system infrastructure functions under extreme market conditions.
 \item Analyzed performance bottlenecks of system infrastructure functions.
 \end{itemize}
 
-\textbf{Proteus Technologies, LLC$\>\>\>\>$Software Developer$\>\>\>\>$Aug. 2007 – Apr. 2008}
+\textbf{Proteus Technologies, LLC$\>\>\>\>$Software Developer$\>\>\>\>$Aug 2007 – Apr 2008}
 \vspace*{-0.0in}
 \begin{itemize} 
 \item Primarily responsible for developing, testing and documenting a service-oriented software application for health and status monitoring  of large-scale parallel and distributed networked systems.
