resume-1pager.tex: fix latex hyperref package

--- a/resume-1pager.tex
+++ b/resume-1pager.tex
@@ -2,14 +2,14 @@
 
 %\newcommand{comments}{1}{[]}
 \newcommand{\comments}[1]{}
-
-\usepackage{url}
 %\documentclass[serif, mathserif, final]{beamer}
 \documentclass[9pt]{res} 
 
 \usepackage[utf8]{inputenc}
 \usepackage[english]{babel}
 \usepackage{xcolor}
+\usepackage{hyperref}
+
 \begin{document} 
 
 \name{Vivek L. Kale}
