--- a/listOfPubs-1pager.tex
+++ b/listOfPubs-1pager.tex
@@ -29,4 +29,4 @@
 %    Energy Solutions through Supercomputers}}. Technical Report
 %  2009. TR0210-373. May 2009. University of Illinois at Urbana-Champaign.
 
-%\end{enumerate} 
+\end{enumerate} 
