Updates from Overleaf

--- a/cv.tex
+++ b/cv.tex
@@ -1,4 +1,4 @@
-\thispagestyle{empty} % this page does not have a header
+a\thispagestyle{empty} % this page does not have a header
 % TODO: fix experiences formatting 
 % TODO: fix experiences tabbing. 
 % TODO: add statistics to publications. 
