--- a/listOfPubs-1pager.tex
+++ b/listOfPubs-1pager.tex
@@ -1,27 +1,14 @@
-%TODO: add new publication -done 
-%TODO: get tech report number for first publication 
 
-% TODO:  add  HadoopJitter
-%reference entry' to list of publications = %TODO: find HadoopJitter
-%reference entry'  + TODO: format it below
-
-%TODO: discuss acceptance rate 
-%TODO: add publisher name, e.g., ACM
-
-%TODO: consider splitting into short and long articles 
-
-%\textbf{\underline{Long Articles}}\\
-
-\underline{Publications}
 \begin{enumerate}
 \item Vivek Kale, Hanru Yan, Shyamali Mukherjee, Jackson Mayo, Keita Teranishi, Richard Rutledge and Alessandro Orso. \textbf{\it Toward Automated Detection of Portability Bugs in Kokkos Parallel Programs}. 8th International Workshop on Software Correctness for HPC Applications, SC24. November 18, 2024. 
 %\item Shravan Kale, Kevin Huck, David Boehme, Vanessa Surjadidjaja and Vivek Kale. \textbf{\textit{Performance Analysis and Auto-tuning Tools for Performance Portable Parallel Programs}}. 2023 ACM/IEEE International Conference for High Performance Computing Networking, Storage, and Analysis. Denver, CO, USA. November 12-17, 2023.
 
-\item Mathialakan Thavappiragasam, Vivek Kale, Oscar Hernandez and Ada Sedova. \textbf{\textit{Addressing Load Imbalance in Bioinformatics and Biomedical Applications: Efficient Scheduling across Multiple GPUs}} In Proceedings of 12th International Workshop on High Performance Bioinformatics and Biomedicine. December 9, 2021. Houston, Texas, USA. 
+%\item Mathialakan Thavappiragasam, Vivek Kale, Oscar Hernandez and Ada Sedova. \textbf{\textit{Addressing Load Imbalance in Bioinformatics and Biomedical Applications: Efficient Scheduling across Multiple GPUs}} In Proceedings of 12th International Workshop on High Performance Bioinformatics and Biomedicine. December 9, 2021. Houston, Texas, USA. 
+\item Kale, V., Lu, W., Curtis, A., Malik, A. M., Chapman, B., Hernandez, O. (2020). Toward supporting multi-gpu targets via taskloop and user-defined schedules. IWOMP 2020. September 2020. Virtual. 
+\item Amanda Randles, Vivek Kale, Jeff Hammond, William D. Gropp and Efthimios Kaxiras. \textbf{\textit{Performance Analysis of the Lattice Boltzmann Model Beyond Navier-Stokes}}. IPDPS 2013. May 2013. Boston, USA.
 
 \item Simplice Donfack, Vivek Kale, Laura Grigori and William D. Gropp. \textbf{\textit{Hybrid Static/Dynamic Scheduling for Already Optimized Dense Matrix Factorizations}}. IPDPS 2012. May 2012. Shanghai, China.
 %\item Torsten Hoefler, James Dinan, Darius Buntinas, Pavan Balaji, Brian Barrett, Ron Brightwell, William Gropp, Vivek Kale and Rajeev Thakur. \textbf{\textit{MPI+MPI: A New Hybrid Approach to Parallel Programming with MPI Plus Shared Memory}}. EuroMPI 2012. September 2012. Madrid, Spain.
-\item Amanda Randles, Vivek Kale, Jeff Hammond, William D. Gropp and Efthimios Kaxiras. \textbf{\textit{Performance Analysis of the Lattice Boltzmann Model Beyond Navier-Stokes}}. IPDPS 2013. May 2013. Boston, USA.
 
 %TODO: add HadoopJitter here 
 
