--- a/listOfSkillSetsForResume.tex
+++ b/listOfSkillSetsForResume.tex
@@ -1,21 +1,6 @@
-{{\bf Languages}: C, C++, python, Fortran, bash, csh, VHDL, Matlab, Java}\\
-{{\bf Tools}: LaTeX, gnuplot, emacs, autoconf, cmake, svn, git, Globus Toolkit}\\
-{{\bf Libraries for Parallelism}: POSIX threads (Pthreads), MPI (mpich3), OpenMP (gomp, llvm), OpenACC (pgi)}; \\
-{{\bf Performance Profiling Tools}: OpenSpeedShop, hpcToolkit, PMPI, Intel VTune}; \\
-{{\bf Platforms}: {Intel Xeon, IBM Power7, AMD Opteron, NVIDIA Keplar, Intel Xeon Phi}}
-\comments{
-\begin{itemize} 
-\item[] \small Intel Xeon, IBM Power7, AMD Opteron, NVIDIA Keplar, Intel Xeon Phi
-\end{itemize} 
-}
+{{\bf Languages}: C, C++, python, Fortran, bash, csh, VHDL, Matlab, Java};\\
+{{\bf Libraries}:  OpenMP (gomp, llvm), CUDA, Kokkos, HIP, POSIX threads (Pthreads), MPI (mpich), OpenACC (pgi), Globus Toolkit}; \\
+{{\bf Tools}: hpcToolkit, PMPI, ompt, nvtx, NVIDIA Nsight, Intel VTune, clang-tidy, KLEE,  gprof, gdb, docker}; \\
+{{\bf Utilities}: git, cmake, spack, vi, clang-format, gnuplot, emacs, autoconf, LaTeX};\\
+{{\bf Platforms}: {NVIDIA A100, AMD MI300, Intel Xeon Phi, IBM Power, Cerebras WSE}}
 
-\comments{
-   {\bf Computer Experience}
-        \begin{itemize}
-        \item[] Courses: Basic, Pascal. Types and Programs: IBM
-        Mainframe/3081D (MTS: Textform, SPSSX; IBM MINI/360
-        (GML/SCRIPT, CAD/CAM); IBM PC (Multimate, Wordperfect);
-        Apple II-Plus (Macwrite, Pagemaker).
-        \end{itemize}
-
-}
