--- a/listOfExperiences-for1pagerResume.tex
+++ b/listOfExperiences-for1pagerResume.tex
@@ -1,52 +1,23 @@
-
-\textbf{{Sandia National Laboratories $\>$$\>$$\>$  Principal Member of Technical Staff II $\>$$\>$$\>$Jul 2024 - present}} 
+\vspace{-0.2in}
+\textbf{{Sandia National Laboratories $\>$$\>$$\>$  Principal Member of Technical Staff II $\>$$\>$$\>$ July 2024 - present}} \textbf{ Sandia National Laboratories $\>$$\>$$\>$ Senior Member of Technical Staff $\>$$\>$$\>$ August 2022 - July 2024}
+\vspace{-0.2in}
 \begin{itemize}
-\item Maintainer of HPC Tools and Runtime Interoperability at Sandia Labs, including liason for LLNL Performance Tools and maintainer for Kokkos Tools. 
+\item Owner of HPC Tools and Runtime Systems at Sandia Labs, including being a liaison for LLNL Performance Tools and maintainer for Kokkos Tools. 
 \item Sandia Rep and contributor to OpenMP specification and MPI forum as Sandia Representative. 
 \end{itemize} 
-\dates{August 2022 - July 2024}
-\location{Livermore, California, USA}
-\title{Senior Member of Technical Staff}
-\employer{Sandia National Laboratories}
 
-\textbf{{Sandia National Laboratories $\>$$\>$$\>$ Senior Member of Technical Staff $\>$$\>$$\>$Aug 2022 - Jul 2024}}
-\begin{itemize}
-	\item Same as above.
-%\item Developing and testing features in the US DoE's LLVM's OpenMP implementation. 
-%\item Contributing to OpenMP 6.0 Specification, specifically on topics of affinity, loop transformations, accelerators and tasking.
-%\item Prototyping tunable locality-aware loop scheduling strategy features for OpenMP, and generally user-defined loop schedules, for LLVM's OpenMP implementation.  
-
-%\item Owner of Kokkos Software Ecosystem's Kokkos Tools, which provides profiling and debugging capabilities for Kokkos programs (for performance portable parallel programs) as well as sophisticated auto-tuning and performance analysis capabilities.
-%\item Contributor to the DOE ASCR Xstack project on automated test generation for parallel programs via LLVM. Developing a source-to-source translator via the ROSE compiler plugin for the LLVM's clangASTRewriter to translate a Kokkos program to a Kokkos Model (simplified version of Kokkos) program for analysis by LLVM's Klee symbolic execution library.
-\end{itemize}
-
-\dates{May 2019 - August 2022}
-\location{Upton, New York, USA}
-\title{Computational Scientist} 
-\employer{Brookhaven National Laboratory} 
-\textbf{{Brookhaven National Laboratory $\>$$\>$$\>$$\>$Computational Scientist$\>$$\>$$\>$$\>$May 2019 - Aug 2022}}
+\textbf{{Brookhaven National Laboratory $\>$$\>$$\>$$\>$Computational Scientist$\>$$\>$$\>$$\>$ May 2019 - August 2022}}
+\vspace{-0.2in}
 \begin{itemize}
   % \item Contributed to developing an LLVM OpenMP implementation, specifically the OpenMP implementation's compiler and its runtime, targetted for Department of Energy's upcoming Exascale Supercomputer platforms. 
-   \item Designed and implemented LLVM's OpenMP user-defined and task-to-multiGPU scheduling strategies to improve within-node load balancing of applications running on supercomputers having multiple GPUs per node.
-   \item Developed benchmarks and evaluating OpenMP implementations on Exascale Supercomputers.
+   \item Designed and implemented OpenMP user-defined multiGPU scheduling for LLVM to improve within-node load balancing of AI and scientific applications. 
+   \item Developed benchmarks and evaluated OpenMP implementations on Exascale supercomputers.
    \item Represented Brookhaven National Laboratory in the OpenMP Architecture Review Board. 
 \end{itemize}
 
-\dates{June 2018 - April 2019}
-\location{Champaign, Illinois, USA}
-\title{Software Developer}
-\employer{Charmworks, Inc.}
-\textbf{Charmworks, Inc. $\>$$\>$$\>$$\>$Software Developer$\>$$\>$$\>$$\>$Jun 2018 - Apr 2019}
-%\begin{position}
-\vspace{0.0in}
+\textbf{Charmworks, Inc. $\>$$\>$$\>$$\>$Software Developer$\>$$\>$$\>$$\>$ June 2018 - April 2019}
+\vspace{-0.2in}
 \begin{itemize}
-%\item Collaborated with Lawrence Livermore National Lab on a proposal for a synergistic loop scheduling and load balancing strategy. 
-%\item Worked on making User-defined Loop Scheduling portable across different parallel programming library, done with Oak Ridge National Lab through DoE Exascale Computing Program. 
-%\item Added examples of loop scheduling in OpenMP in the Examples section of OpenMP Specification.
-%\item Worked on a NSF startup SBIR proposal for loop scheduling for desktop computers. 
-%\item Collaborated on developing a proposal to add an OpenMP User-defined Schedule to the OpenMP specification based on an OpenMPCon 2017 paper, presenting a proposal at the OpenMP F2F in Santa Clara and the upcoming F2F in Toronto.
-\item Did research and development for User-defined Loop Schedules in OpenMP.
-%\item Assisted with slides for pitch and marketing of Charm++ software, and providing feedback for tutorials on Charm++.
-\item Integrated a shared memory library for sophisticated loop scheduling strategies, including some based on my dissertation, into the current version of Charm++. 
-%item Comparing performance of a loop scheduling strategy available in the integrated shared memory library with the performance of the corresponding loop scheduling strategy available in LLVM’s OpenMP library.
+\item Conducted research and development for User-defined Loop Schedules (UDS) in OpenMP.
+\item Integrated OpenMP UDS loop scheduling strategies into Charm++'s CkLoop. 
 \end{itemize}
