--- a/resume-1pager.tex
+++ b/resume-1pager.tex
@@ -19,32 +19,34 @@
 %\email{vivek.lkale@gmail.com}
 %\web{http://vivek112.googlepages.com}
 %\citizenship{U.S. Citizen}
-\begin{resume}
 \vspace{-0.1in}
+\begin{resume}
+\vspace{-0.4in}
 \moveleft\hoffset\vbox{\hrule width\resumewidth height 1pt}\smallskip
-\begin{center}
-	\textit{\bf Phone}: +01 217-369-7996. \textit{\bf E-mail}: \url{vivek.lkale@gmail.com}. \textit{\bf Web}: \url{http://vlkale.github.io}. \\ U.S. Citizen
+\begin{center} \textit{\bf E-mail}: \url{vivek.lkale@gmail.com}. \textit{\bf Web}: \url{http://vlkale.github.io}. 
+   \textbf{US Citizen}
 \end{center}
 %\moveleft.5\sectionwidth\centerline{U.S. Citizen} 
 \begin{center}
 %\moveleft.5\sectionwidth\centerline{{\it \small Objective}: \small Obtain position as software engineer specializing in performance engineering.}
 \end{center}
-\vspace{-0.5in}
+\vspace{-0.65in}
 \small
-\section{Education}
-\vspace{0.2in}
-    \small B.S., Computer Science, 2007, University of Illinois at Urbana-Champaign\\
-    \small Ph.D., Computer Science, 2015, University of Illinois at Urbana-Champaign
 \section{Experience}
 \vspace{0.2in}
 \input{listOfExperiences-for1pagerResume}
 
+\section{Education}
+\vspace{0.02in}
+    \small B.S., Computer Science, 2007, University of Illinois at Urbana-Champaign\\
+    \small Ph.D., Computer Science, 2015, University of Illinois at Urbana-Champaign
+    
 \section{Publications}
-\vspace{0.1in}
-\input{listOfPubsHighlights}
+\vspace{-0.1in}
+\input{listOfPubs-1pager}
 
 \section{Projects}
-\vspace{0.1in}
+\vspace{-0.1in}
 \input{listOfProjects-for1pagerResume}
 
 \section{Technical Skills}
