Updates from Overleaf

--- a/listOfSkillSetsForResume.tex
+++ b/listOfSkillSetsForResume.tex
@@ -1,6 +1,5 @@
-{{\bf Languages}: C, C++, python, Fortran, bash, csh, VHDL, Matlab, Java};\\
-{{\bf Libraries}:  OpenMP (gomp, llvm), CUDA, Kokkos, HIP, POSIX threads (Pthreads), MPI (mpich), OpenACC (pgi), Globus Toolkit}; \\
-{{\bf Tools}: hpcToolkit, PMPI, ompt, nvtx, NVIDIA Nsight, Intel VTune, clang-tidy, KLEE,  gprof, gdb, docker}; \\
+{{\bf Languages}: C, C++, python, CUDA, Fortran, bash, csh, VHDL, Matlab, Java};\\
+{{\bf Libraries}:  OpenMP (gomp, llvm), Kokkos, HIP, POSIX threads (Pthreads), MPI (mpich), OpenACC (pgi), Globus Toolkit}; \\
+{{\bf Tools}: Kokkos Tools, PMPI, ompt, nvtx, NVIDIA Nsight, tau, hpcToolkit, Intel VTune, clang-tidy, KLEE,  gprof, gdb, docker}; \\
 {{\bf Utilities}: git, cmake, spack, vi, clang-format, gnuplot, emacs, autoconf, LaTeX};\\
-{{\bf Platforms}: {NVIDIA A100, AMD MI300, Intel Xeon Phi, IBM Power, Cerebras WSE}}
 
