Updates from Overleaf

--- a/listOfCoursesShort.tex
+++ b/listOfCoursesShort.tex
@@ -2,5 +2,4 @@
 %\item[] Designing and Building Scientific Applications,
 %  Parallel Software Patterns, Program Optimization, Parallel Computer Architecture, Algorithms, Artificial Intelligence, Software Engineering
 %\end{itemize}
-
-Designing and Building Scientific Applications, Parallel Software Patterns, Program Optimization, Parallel Computer Architecture, Algorithms, Artificial Intelligence, Software Engineering
+Designing and Building Scientific Applications (2015), Program Compiler Optimization (2012), Parallel Computer Architecture (2010),  Artificial Intelligence (2009), Machine Learning for Scientists and Engineers (2024), UCLA Technical Management Program (2024)
