--- a/listOfExperiences-for1pagerResume.tex
+++ b/listOfExperiences-for1pagerResume.tex
@@ -1,22 +1,30 @@
 \vspace{-0.2in}
-\textbf{{Sandia National Laboratories $\>$$\>$$\>$  Principal Member of Technical Staff II $\>$$\>$$\>$ July 2024 - present}} \textbf{ Sandia National Laboratories $\>$$\>$$\>$ Senior Member of Technical Staff $\>$$\>$$\>$ August 2022 - July 2024}
+
+
+\textbf{Sandia National Laboratories}\\
+\textit{Principal Member of Technical Staff II} \hfill \textit{July 2024 - Present}\\
+\textit{Senior Member of Technical Staff} \hfill \textit{August 2022 - July 2024}
+
+%\textbf{{Sandia National Laboratories $\>$$\>$$\>$  Principal Member of Technical Staff II $\>$$\>$$\>$ July 2024 - present}} \textbf{ Sandia National Laboratories $\>$$\>$$\>$ Senior Member of Technical Staff $\>$$\>$$\>$ August 2022 - July 2024}
 \vspace{-0.2in}
 \begin{itemize}
-\item Owner of HPC Tools and Runtime Systems at Sandia Labs, including being a liaison for LLNL Performance Tools and maintainer for Kokkos Tools. 
-\item Sandia Rep and contributor to OpenMP specification and MPI forum as Sandia Representative. 
+\item Owning HPC Tools and Runtime Systems at Sandia Labs, including being a liaison for LLNL Performance Tools and maintainer for Kokkos Tools. 
+\item Contributing to the OpenMP specification and MPI forum as Sandia Representative, specifically being involved in tools subcommittee. 
 \end{itemize} 
-
-\textbf{{Brookhaven National Laboratory $\>$$\>$$\>$$\>$Computational Scientist$\>$$\>$$\>$$\>$ May 2019 - August 2022}}
-\vspace{-0.2in}
+\vspace{-0.10in}
+\textbf{Brookhaven National Laboratory}\\
+\textit{Assistant Computational Scientist} \hfill \textit{May 2019 - August 2022}\\
+\vspace*{-0.35in}
 \begin{itemize}
   % \item Contributed to developing an LLVM OpenMP implementation, specifically the OpenMP implementation's compiler and its runtime, targetted for Department of Energy's upcoming Exascale Supercomputer platforms. 
    \item Designed and implemented OpenMP user-defined multiGPU scheduling for LLVM to improve within-node load balancing of AI and scientific applications. 
    \item Developed benchmarks and evaluated OpenMP implementations on Exascale supercomputers.
    \item Represented Brookhaven National Laboratory in the OpenMP Architecture Review Board. 
 \end{itemize}
-
-\textbf{Charmworks, Inc. $\>$$\>$$\>$$\>$Software Developer$\>$$\>$$\>$$\>$ June 2018 - April 2019}
-\vspace{-0.2in}
+\vspace{-0.1in}
+\textbf{Charmworks}\\
+\textit{Software Engineer} \hfill \textit{June 2018 - April 2019}\\
+\vspace{-0.35in}
 \begin{itemize}
 \item Conducted research and development for User-defined Loop Schedules (UDS) in OpenMP.
 \item Integrated OpenMP UDS loop scheduling strategies into Charm++'s CkLoop. 
