--- a/listOfExperiences.tex
+++ b/listOfExperiences.tex
@@ -1,18 +1,15 @@
 
-\textbf{{Sandia National Laboratories $\>$$\>$$\>$  Principal Member of Technical Staff $\>$$\>$$\>$Jul 2024 - present}} 
+\textbf{{Sandia National Laboratories $\>$$\>$$\>$  Principal Member of Technical Staff II $\>$$\>$$\>$Jul 2024 - present}} 
 \begin{itemize}
-
 	\item Owner of Kokkos Software Ecosystem's Kokkos Tools (now part of the Linux Foundation) which provides profiling and debugging capabilities for Kokkos programs (for performance portable parallel programs) as well as sophisticated auto-tuning and performance analysis capabilities.
 	\item Project Technical Manager for 5 people to research software correctness tools and formal methods for Kokkos.  
-	\item Contributing to OpenMP specification for loop transformation and tasking features that enrich autotuning capabilities of Kokkos Toolsauto-tuning.   
-	%\item Maintining Kokkos Tools project, which is part of the Linux Foundation as Apr. 2024. 
+	\item Contributing to OpenMP and OpenACC specification for tooling capabilities to support. 
+    \item AI-assisted tools for code transformations and auto-tuning of Kokkos. 
 
+%loop transformation and tasking features that enrich autotuning capabilities of Kokkos Tools. 
+	%\item Maintining Kokkos Tools project, which is part of the Linux Foundation as Apr. 2024. 
 	\item Developing software packages for Tools of HPC Software stacks, in particular using Spack.
 \end{itemize} 
-\dates{August 2022 - July 2024}
-\location{Livermore, California, USA}
-\title{Senior Member of Technical Staff}
-\employer{Sandia National Laboratories}
 
 \textbf{{Sandia National Laboratories $\>$$\>$$\>$ Senior Member of Technical Staff $\>$$\>$$\>$Aug 2022 - Jul 2024}} 
 
@@ -21,7 +18,6 @@
 \item Developing and testing features in the US DoE's LLVM's OpenMP implementation. 
 \item Contributing to OpenMP 6.0 Specification, specifically on topics of affinity, loop transformations, accelerators and tasking.
 \item Prototyping tunable locality-aware loop scheduling strategy features for OpenMP, and generally user-defined loop schedules, for LLVM's OpenMP implementation.  
-
 \item Owner of Kokkos Software Ecosystem's Kokkos Tools, which provides profiling and debugging capabilities for Kokkos programs (for performance portable parallel programs) as well as sophisticated auto-tuning and performance analysis capabilities.
 \item Contributor to the DOE ASCR Xstack project on automated test generation for parallel programs via LLVM. Developing a source-to-source translator via the ROSE compiler plugin for the LLVM's clangASTRewriter to translate a Kokkos program to a Kokkos Model (simplified version of Kokkos) program for analysis by LLVM's Klee symbolic execution library.
 \end{itemize}
