--- a/listOfPubs.tex
+++ b/listOfPubs.tex
@@ -12,8 +12,10 @@
 
 %\textbf{\underline{Long Articles}}\\
 
-\underline{Papers}
-\begin{enumerate} 
+
+\newcommand{\myPapers}[]{ 
+\item Vivek Kale, Hanru Yan, Shyamali Mukherjee, Jackson Mayo, Keita Teranishi, Richard Rutledge and Alessandro Orso. \textbf{\textit{Toward Automated Detection of Portability Bugs in Kokkos Parallel Programs}}. 8th International Workshop on Software Correctness for HPC Applications, SC24. November 18, 2024. 
+
 \item Vivek Kale, Vanessa Surjadidjaja, and James Brandt. \textbf{\textit{Using LDMS Performance Monitoring for Tuning Kokkos Programs via PAPI}}. LDMSCon 2024. June 11-13, 2024. Boston, MA.
 
 \item Vivek Kale and Thomas R. Scogland. \textbf{\textit{An OpenMP Set Object for Heterogeneous Parallel Programming with Multi-xPUs}}. ArXiv. May 2024. 
@@ -52,6 +54,14 @@ Boltzmann Model Beyond Navier-Stokes}}. IPDPS 2013. May 2013. Boston, USA.
 \item Vivek Kale. \textbf{\textit{Towards Using and Improving the NAS Parallel Benchmarks: A Parallel Patterns Approach}}. ParaPLoP 2010. April 2010. Carefree, USA.
 \item Vivek Kale and Edgar Solomonik. \textbf{\textit{Parallel Sorting Pattern}}. ParaPLoP 2010. April 2010. Carefree, USA. 
 \item Vivek Kale. \textbf{\textit{The Correlation between Parallel Patterns and the NAS Parallel Benchmarks}}. ICSE 2010. May 2010. Johannesberg, South Africa.
+
+
+}
+
+
+\underline{Papers}
+\begin{enumerate} 
+\myPapers
 \end{enumerate} 
 
 \underline{Extended Abstracts}
