--- a/listOfSkillSetsForCV.tex
+++ b/listOfSkillSetsForCV.tex
@@ -1,13 +1,4 @@
-{{\bf Languages}: C, C++, python, Fortran, bash, csh, CUDA}
-
-{{\bf Tools}: LaTeX, gnuplot, emacs, autoconf, cmake, svn}
-
-{{\bf Libraries for Parallelism}: POSIX threads (Pthreads), MPI (mpich3), OpenMP (gomp, llvm), OpenACC (pgi)}
-
-{{\bf Performance Profiling Tools and Libraries}: hpcToolkit, PAPI, nvprof, gprof}
-
-\comments{
-\begin{itemize} 
-\item[] \small Intel Xeon, IBM Power7, AMD Opteron, NVIDIA Keplar, Intel Xeon Phi
-\end{itemize}
-}
+{{\bf Languages}: C, C++, python, CUDA, Fortran, bash, csh, VHDL, Matlab, Java, Rust, HTML, Markdown, LaTeX};\\
+{{\bf Libraries}:  OpenMP (gomp, llvm), Kokkos, HIP, POSIX threads (Pthreads), MPI (mpich), OpenACC (pgi), Globus Toolkit, Charm++, HPX}; \\
+{{\bf Tools}: Kokkos Tools, PMPI, ompt, nvtx, NVIDIA Nsight, tau, hpcToolkit,  PAPI, NVIDIA CUPTI, Intel VTune, clang-tidy, KLEE,  gprof, GPTune, gdb, docker}; \\
+{{\bf Utilities}: git, cmake, spack, vi, clang-format, gnuplot, emacs, autoconf};\\
