--- a/listOfSkillSetsForResume.tex
+++ b/listOfSkillSetsForResume.tex
@@ -1,5 +1,5 @@
-{{\bf Languages}: C, C++, python, CUDA, Fortran, bash, csh, VHDL, Matlab, Java};\\
-{{\bf Libraries}:  OpenMP (gomp, llvm), Kokkos, HIP, POSIX threads (Pthreads), MPI (mpich), OpenACC (pgi), Globus Toolkit}; \\
-{{\bf Tools}: Kokkos Tools, PMPI, ompt, nvtx, NVIDIA Nsight, tau, hpcToolkit, Intel VTune, clang-tidy, KLEE,  gprof, gdb, docker}; \\
-{{\bf Utilities}: git, cmake, spack, vi, clang-format, gnuplot, emacs, autoconf, LaTeX};\\
-
+\fontfamily{lmss}\selectfont
+{\textbf{Languages}: C, C++, CUDA, python, Fortran, Java,  bash, csh, VHDL, Matlab};\\
+{\textbf{Libraries}:  OpenMP (gomp, llvm), Kokkos, MPI (mpich), Charm++, OpenACC (pgi), Globus}; \\
+{\textbf{Tools}: Kokkos Tools, PMPI, ompt, PAPI, nvtx, roctx, NVIDIA Nsight, tau, hpcToolkit, Intel VTune, clang-tidy, KLEE,  gprof, gdb}; \\
+{\textbf{Utilities}: git, cmake, spack, vi, clang-format, gnuplot, emacs, autoconf, LaTeX, docker};\\
