--- a/resume-template.tex
+++ b/resume-template.tex
@@ -1,4 +1,4 @@
-%\thispagestyle{empty} % this page does not have a header
+\thispagestyle{empty} % this page does not have a header
 
 %\newcommand{comments}{1}{[]}
 \newcommand{\comments}[1]{}
@@ -21,34 +21,25 @@
 \usepackage{hyperref}
 
 \begin{document} 
+\name{\fontfamily{lmss}\selectfont Vivek L. Kale}
 
-\begin{center}
-\fontfamily{cmss}\selectfont
-    \Large \textbf{Vivek L. Kale} \\
-    \normalsize
 
-    \textbf{Email}: vivek.lkale@gmail.com | 
-      \textbf{Website}: \href{http://vlkale.github.io}{vlkale.github.io}
-      
-      \textbf{LinkedIn}: \href{http://linkedin.com/in/vlkale}{linkedin.com/in/vlkale} | \textbf{US Citizen with Secret Clearance}
+\begin{document}
+
+
+\vspace{-0.1in}
+\moveleft\hoffset\vbox{\hrule width\resumewidth height 1pt}\smallskip
+\begin{center} 
+\fontfamily{lmss}\selectfont 
+\input{contactInfo}
 \end{center}
-\vspace{0.5cm}
-\noindent\rule{\linewidth}{0.4pt}
-
-
-%\vspace{-0.1in}
-%\moveleft\hoffset\vbox{\hrule width\resumewidth height 1pt}\smallskip
-%\begin{center} 
-%\fontfamily{lmss}\selectfont 
-%\input{contactInfo}
-%\end{center}
 %\moveleft.5\sectionwidth\centerline{U.S. Citizen} 
 
-\section*{\fontfamily{lmss}\selectfont Professional Summary}
+\section{\fontfamily{lmss}\selectfont Professional Summary}
 \input{ProfessionalSummary}
 
-\section*{\fontfamily{lmss}\selectfont Experience}
-%\vspace{0.02in}
+\section{\fontfamily{lmss}\selectfont Experience}
+\vspace{0.02in}
 \input{listofExperiences-resume} 
 
 %\section{Research Overview} 
@@ -65,18 +56,18 @@
 %cloud-based infrastructure.
 
 
-%\vspace{-0.10in}
-\section*{\fontfamily{lmss}\selectfont Education}
-%\vspace{0.2in}
+\vspace{-0.10in}
+\section{\fontfamily{lmss}\selectfont Education}
+\vspace{0.2in}
 \input{listEducation-resume1pager}
 
 
-\section*{\fontfamily{lmss}\selectfont Technical Skills} 
-%\vspace{0.01in}
+\section{\fontfamily{lmss}\selectfont Technical Skills} 
+\vspace{0.01in}
 \input{listOfSkillSetsForResume}
-%\vspace*{-0.2in}
+\vspace*{-0.2in}
 
-\section*{\fontfamily{lmss}\selectfont Projects} 
+\section{\fontfamily{lmss}\selectfont Projects} 
 %\vspace{-0.01in}
 \input{listOfProjects-for1pagerResume} 
 
