--- a/cv.tex
+++ b/cv.tex
@@ -1,4 +1,4 @@
-a\thispagestyle{empty} % this page does not have a header
+%\thispagestyle{empty} % this page does not have a header
 % TODO: fix experiences formatting 
 % TODO: fix experiences tabbing. 
 % TODO: add statistics to publications. 
@@ -7,6 +7,8 @@ a\thispagestyle{empty} % this page does not have a header
 %\documentclass[serif, mathserif, final]{beamer}
 \documentclass[]{res} 
 \usepackage[utf8]{inputenc}
+\usepackage[T1]{fontenc}
+\usepackage{lmodern}
 \usepackage[english]{babel}
 %\usepackage{fancyhdr}
 %\usepackage{lastpage}
@@ -22,13 +24,14 @@ a\thispagestyle{empty} % this page does not have a header
 
 
 \begin{document}
-\name{Vivek L. Kale, PhD}
+\fontfamily{lmss}\selectfont
+\name{Vivek L. Kale}
 
 \begin{resume}
 \vspace{0.2in}
 \moveleft\hoffset\vbox{\hrule width\resumewidth height 1pt}\smallskip
 
-{\small 
+{
 \centering
 \textit{Phone}: %\phonenumber[country=US,foreign]{2173697996} .
 \href{tel:12173697996}{+01 217-369-7996}
@@ -37,22 +40,23 @@ a\thispagestyle{empty} % this page does not have a header
 }
 
 \vspace*{0.1in}
-\moveleft.5\sectionwidth\centerline{\small U.S. Citizen}
+\moveleft.5\sectionwidth\centerline{ U.S. Citizen with Secret Clearance}
 
 %TODO: consider adding 'with Q clearance above.
 %\moveleft.5\sectionwidth\centerline{Objective: Position as software engineer specializing in performance engineering.}
 \section{Education}
 \vspace*{0.1in}
-\textbf{Bachelor of Science, Computer Science}\\
-University of Illinois at Urbana-Champaign, May 2007
+\input{listEducation}
+%\textbf{Doctor of Philosophy, Computer Science}\\
+%University of Illinois at Urbana-Champaign, May 2015\\
+%\quad \quad \textit{Advisor}: William D. Gropp\\
+%\textbf{Bachelor of Science, Computer Science}\\ 
+%University of Illinois at Urbana-Champaign, May 2007
 %\quad \quad \textit{Undergraduate GPA}: 3.51/4.00\\
 
 %\textbf{Master of Science, Computer Science}\\ 
 %University of Illinois at Urbana-Champaign, December 2010
 
-\textbf{Doctor of Philosophy, Computer Science}\\
-University of Illinois at Urbana-Champaign, May 2015\\
-\quad \quad \textit{Advisor}: William D. Gropp\\
 %\quad \quad \textit{GPA}: 3.96/4.00
 
 \section{Honors}
