Updates from Overleaf

--- a/resume.tex
+++ b/resume.tex
@@ -47,7 +47,7 @@
 \section*{\fontfamily{lmss}\selectfont Professional Summary}
 \input{ProfessionalSummary}
 
-\section*{\fontfamily{lmss}\selectfont Experience}
+\section*{\fontfamily{lmss}\selectfont Relevant Experience}
 %\vspace{0.02in}
 \input{listofExperiences-resume} 
 
