Updates from Overleaf

--- a/listOfSkillSetsForResume.tex
+++ b/listOfSkillSetsForResume.tex
@@ -1,5 +1,5 @@
 \fontfamily{lmss}\selectfont
 {\textbf{Languages}: C, C++, CUDA, python, Fortran, Java,  bash, csh, VHDL, Matlab};\\
 {\textbf{Libraries}:  OpenMP (gomp, llvm), Kokkos, MPI (mpich), Charm++, OpenACC (pgi), Globus}; \\
-{\textbf{Tools}: Kokkos Tools, PMPI, ompt, PAPI, nvtx, roctx, NVIDIA Nsight, tau, hpcToolkit, Intel VTune, clang-tidy, KLEE,  gprof, gdb}; \\
+{\textbf{Tools}: Kokkos Tools, PMPI, ompt, PAPI, nvtx, NVIDIA Nsight, tau, hpcToolkit, VTune, clang-tidy, KLEE,  gprof, gdb}; \\
 {\textbf{Utilities}: git, cmake, spack, vi, clang-format, gnuplot, emacs, autoconf, LaTeX, docker};\\
