--- a/resume.tex
+++ b/resume.tex
@@ -27,12 +27,12 @@
     \Large \textbf{Vivek L. Kale} \\
     \normalsize
 
-    \textbf{Email}: vivek.lkale@gmail.com | 
-      \textbf{Website}: \href{http://vlkale.github.io}{vlkale.github.io}
-      
-      \textbf{LinkedIn}: \href{http://linkedin.com/in/vlkale}{linkedin.com/in/vlkale} | \textbf{US Citizen with Secret Clearance}
+   \textbf{Phone:} \href{tel: +01 217-369-7996}{217-369-7996} | \textbf{Email}: \href{mailto:vivek.lkale@gmail.com}{vivek.lkale@gmail.com} | 
+      \textbf{LinkedIn}: \href{http://linkedin.com/in/vlkale}{linkedin.com/in/vlkale} 
+
+     \textbf{Website}: \href{http://vlkale.github.io}{vlkale.github.io} | \textbf{US Citizen with Secret Clearance}
 \end{center}
-\vspace{0.5cm}
+%\vspace{0.5cm}
 \noindent\rule{\linewidth}{0.4pt}
 
 
