--- a/ProfessionalSummary.tex
+++ b/ProfessionalSummary.tex
@@ -2,6 +2,6 @@
 \fontfamily{lmss}\selectfont
 \begin{itemize}
     \item Highly skilled computational scientist and software developer with expertise in high performance computing (HPC), runtime systems, and parallel programming models. 
-    \item Proven track record of code contributions to GPU parallel programming standards and developing HPC profiling and debugging tools and HPC runtime systems. 
-    \item Effective communicator and team player with a strong publication record.
+    \item Proven track record of contributions to GPU parallel programming standards, AI-assisted tools for profiling and debugging, and runtime systems. 
+    \item Effective communicator and team player with a strong publication record of over 25 publications. 
 \end{itemize}
